--- a/src/Lib.csproj
+++ b/src/Lib.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFrameworks>netcoreapp3.1;net5.0;net6.0</TargetFrameworks>
-    <AssemblyName>PilotAppLib.Clients.MetNorway</AssemblyName>
+    <AssemblyName>PilotAppLibs.Clients.MetNorway</AssemblyName>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
     <Authors>Simon Mårtensson</Authors>
   </PropertyGroup>
@@ -17,7 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="PilotAppLib.SimpleHttp" Version="1.0.0" />
+    <PackageReference Include="PilotAppLibs.SimpleHttp" Version="1.0.0" />
   </ItemGroup>
 
 </Project>
